Introducing Spock tests for Rack and Weird metrics.