@@ -30,6 +30,19 @@
                 <optional>true</optional>
                 <version>1.18.28</version>
             </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>3.0.8</version>
+                <type>pom</type>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.spockframework</groupId>
+                <artifactId>spock-core</artifactId>
+                <version>2.0-groovy-3.0</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -57,7 +70,6 @@
                             <include>**/*Spec.*</include>
                             <include>**/*Test.*</include>
                         </includes>
-                        <argLine>--enable-preview --illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
             </plugins>
